<resources>
    <string name="app_name">Happy Network</string>
    <string name="smile">Smile</string>
    <string name="terms">Terms of Use</string>
    <string name="policy">Privacy Policy</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_fb">fb image</string>
    <string name="forgot_password">forgot password?</string>
    <string name="create_hint">create your happy account</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login in</string>
    <string name="email">Email</string>
    <string name="password">password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_created">You already have an account</string>
    <string name="register">Register</string>
</resources>
