<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/sixteen_dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingStart="@dimen/sixteen_dp"
        android:paddingEnd="@dimen/sixteen_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sign_in"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:background="@drawable/corner_bg"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/email_text_drawable"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:layout_marginRight="@dimen/ten_dp"
                android:drawableLeft="@drawable/email_text_drawable"
                android:paddingLeft="@dimen/ten_dp"
                android:paddingRight="0dp"
                tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            android:background="@drawable/corner_bg"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/password_text_drawable"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/password_text_drawable"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/facebook_bg"
                android:contentDescription="@string/sign_in_fb"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/gs"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:background="@drawable/google_bg"
                android:contentDescription="@string/sign_in"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/google"
                android:layout_marginLeft="50dp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/eight_dp"
            android:background="@drawable/button_spinner"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:initialCornerAngle="100dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="2dp" />

        <TextView
            android:id="@+id/resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/raleway"
            android:padding="@dimen/eight_dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_hint"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen_dp"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/eight_dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/sixteen_dp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>
</layout>
